--- a/packages/platform-enduser/package.json
+++ b/packages/platform-enduser/package.json
@@ -19,8 +19,8 @@
     "@forgerock/platform-shared": "1.0.0",
     "appauthhelper": "0.5.0",
     "axios": "0.26.1",
-    "bootstrap": "4.6.0",
-    "bootstrap-vue": "2.21.2",
+    "bootstrap": "4.6.1",
+    "bootstrap-vue": "2.22.0",
     "core-js": "3.6.5",
     "dayjs": "1.8.20",
     "es6-promise": "4.2.4",
@@ -50,7 +50,7 @@
     "jest": "26.4.2",
     "jest-html-reporters": "1.2.0",
     "lint-staged": "8.1.5",
-    "node-sass": "4.12.0",
+    "sass": "1.52.1",
     "sass-loader": "8.0.2",
     "style-resources-loader": "1.2.1",
     "vue-cli-plugin-i18n": "0.6.0",
