--- a/packages/platform-shared/package.json
+++ b/packages/platform-shared/package.json
@@ -11,8 +11,8 @@
     "@forgerock/platform-shared": "1.0.0",
     "appauthhelper": "0.5.0",
     "axios": "0.26.1",
-    "bootstrap": "4.6.0",
-    "bootstrap-vue": "2.21.2",
+    "bootstrap": "4.6.1",
+    "bootstrap-vue": "2.22.0",
     "clipboard-polyfill": "3.0.1",
     "core-js": "3.6.5",
     "d3": "6.7.0",
@@ -51,7 +51,7 @@
     "eslint-plugin-import": "2.18.2",
     "flush-promises": "1.0.2",
     "jest": "26.4.2",
-    "node-sass": "4.12.0",
+    "sass": "1.52.1",
     "sass-loader": "8.0.2",
     "vue-jest": "3.0.5",
     "vue-template-compiler": "2.6.11"
