--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "mochawesome-merge": "4.1.0",
     "nano-staged": "0.8.0",
     "nock": "13.0.4",
-    "node-sass": "4.12.0",
+    "sass": "1.52.1",
     "postcss-html": "1.4.1",
     "sass-loader": "8.0.2",
     "selenium-webdriver": "4.0.0-alpha.7",
