--- a/packages/platform-login/package.json
+++ b/packages/platform-login/package.json
@@ -18,8 +18,8 @@
     "@forgerock/javascript-sdk": "3.0.0",
     "@forgerock/platform-shared": "1.0.0",
     "axios": "0.26.1",
-    "bootstrap": "4.6.0",
-    "bootstrap-vue": "2.21.2",
+    "bootstrap": "4.6.1",
+    "bootstrap-vue": "2.22.0",
     "clipboard-polyfill": "3.0.1",
     "core-js": "3.6.5",
     "lodash": "4.17.21",
@@ -50,7 +50,7 @@
     "jest": "26.4.2",
     "jest-html-reporters": "1.2.0",
     "lint-staged": "8.1.5",
-    "node-sass": "4.12.0",
+    "sass": "1.52.1",
     "sass-loader": "8.0.2",
     "style-resources-loader": "1.2.1",
     "vue-cli-plugin-i18n": "0.6.0",
