--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "nano-staged": "0.8.0",
     "nock": "13.0.4",
     "sass": "1.52.1",
-    "postcss-html": "1.4.1",
+    "postcss-html": "1.5.0",
     "sass-loader": "8.0.2",
     "selenium-webdriver": "4.0.0-alpha.7",
     "style-resources-loader": "1.2.1",
@@ -66,7 +66,9 @@
     "**/juice/cheerio": "1.0.0-rc.6",
     "**/pretty/js-beautify/config-chain/ini": "1.3.6",
     "**/**/cypress-lighthouse/lighthouse/yargs/y18n": "3.2.2",
+    "**/**/d3-color": "3.1.0",
     "**/**/minimist": "1.2.6",
+    "**/**/minimatch": "5.1.0",
     "**/**/ramda": "0.27.1",
     "**/**/with/acorn": "4.0.13",
     "**/**/istanbul-lib-instrument": "6.0.0",
